# gstreamer-101

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
cmake-modules/: FindGStreamer.cmake
docker/: entrypoint.sh
src/: basic-tutorial-1.c  basic-tutorial-2.c
